tasks/serde-rs__serde-2405/tests/test_suite/tests/ui/unexpected-literal/container.stderr
error: expected identifier
 --> tests/ui/unexpected-literal/container.rs:4:9
  |
4 | #[serde("literal")]
  |         ^^^^^^^^^
